// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function with a bucket binding 1`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) { await this.bucket.put(\\"hello.txt\\", event); }
};
})())({
bucket: new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/bucket.inflight.ts\\")).BucketClient(process.env[\\"BUCKET_NAME_0d1f5ed4\\"])
})"
`;

exports[`function with a bucket binding 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_wingapp_Function_IamRole_DC08657F\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_wingapp_Function_IamRolePolicy_F7F78D73\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"s3:PutObject*\\\\\\",\\\\\\"s3:Abort*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.root_wingapp_Bucket_A22C978E.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.root_wingapp_Bucket_A22C978E.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function_IamRole_DC08657F.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_wingapp_Function_IamRolePolicyAttachment_F735FD96\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function_IamRole_DC08657F.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_wingapp_Function_147C5E15\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"BUCKET_NAME_0d1f5ed4\\": \\"\${aws_s3_bucket.root_wingapp_Bucket_A22C978E.bucket}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function-c83ae89f\\"
          }
        },
        \\"function_name\\": \\"Function-c83ae89f\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function_IamRole_DC08657F.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_wingapp_Function_Code_B4C30096.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_wingapp_Function_S3Object_259A2570.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_wingapp_Bucket_A22C978E\\": {
        \\"bucket_prefix\\": \\"bucket-c8f0930f-\\"
      },
      \\"root_wingapp_Function_Code_B4C30096\\": {
        \\"bucket_prefix\\": \\"code-c85197bd-\\"
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"root_wingapp_Bucket_PublicAccessBlock_C9EEA596\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.root_wingapp_Bucket_A22C978E.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"root_wingapp_Bucket_Encryption_87CFEF0B\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_wingapp_Bucket_A22C978E.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    },
    \\"aws_s3_object\\": {
      \\"root_wingapp_Function_S3Object_259A2570\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_wingapp_Function_Code_B4C30096.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`function with a function binding 1`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) { console.log(event); }
};
})())({

})"
`;

exports[`function with a function binding 2`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) {
      console.log(\\"Event: \\" + event);
      await this.function.invoke(JSON.stringify({ hello: \\"world\\" }));
    }
};
})())({
function: new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/function.inflight.ts\\")).FunctionClient(process.env[\\"FUNCTION_NAME_99596f35\\"])
})"
`;

exports[`function with a function binding 3`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_wingapp_Function1_IamRole_4BB0139C\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"root_wingapp_Function2_IamRole_F0FE939C\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_wingapp_Function1_IamRolePolicy_2489A6E1\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function1_IamRole_4BB0139C.name}\\"
      },
      \\"root_wingapp_Function2_IamRolePolicy_2709B101\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"lambda:InvokeFunction\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_lambda_function.root_wingapp_Function1_949A5144.arn}\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function2_IamRole_F0FE939C.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_wingapp_Function1_IamRolePolicyAttachment_5B656765\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function1_IamRole_4BB0139C.name}\\"
      },
      \\"root_wingapp_Function2_IamRolePolicyAttachment_4D3FE8A8\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function2_IamRole_F0FE939C.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_wingapp_Function1_949A5144\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function1-c893a304\\"
          }
        },
        \\"function_name\\": \\"Function1-c893a304\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function1_IamRole_4BB0139C.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_wingapp_Function1_Code_B89D5965.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_wingapp_Function1_S3Object_78279D56.key}\\"
      },
      \\"root_wingapp_Function2_A061E64A\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"FUNCTION_NAME_99596f35\\": \\"\${aws_lambda_function.root_wingapp_Function1_949A5144.arn}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function2-c822812f\\"
          }
        },
        \\"function_name\\": \\"Function2-c822812f\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function2_IamRole_F0FE939C.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_wingapp_Function2_Code_B83D9762.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_wingapp_Function2_S3Object_D5F457B4.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_wingapp_Function1_Code_B89D5965\\": {
        \\"bucket_prefix\\": \\"code-c8a055d2-\\"
      },
      \\"root_wingapp_Function2_Code_B83D9762\\": {
        \\"bucket_prefix\\": \\"code-c85e28f5-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_wingapp_Function1_S3Object_78279D56\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_wingapp_Function1_Code_B89D5965.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      },
      \\"root_wingapp_Function2_S3Object_D5F457B4\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_wingapp_Function2_Code_B83D9762.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`function with a queue binding 1`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) { await this.queue.push(\\"info\\"); }
};
})())({
queue: new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/queue.inflight.ts\\")).QueueClient(process.env[\\"QUEUE_URL_cfa28427\\"])
})"
`;

exports[`function with a queue binding 2`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) { console.log(\\"Received\\" + event); }
};
})())({

})"
`;

exports[`function with a queue binding 3`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_wingapp_Function_IamRole_DC08657F\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"root_wingapp_QueueOnMessage0f11dd60_IamRole_AA73FB45\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_wingapp_Function_IamRolePolicy_F7F78D73\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:SendMessage\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.root_wingapp_Queue_01757426.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function_IamRole_DC08657F.name}\\"
      },
      \\"root_wingapp_QueueOnMessage0f11dd60_IamRolePolicy_3C1917B1\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:ReceiveMessage\\\\\\",\\\\\\"sqs:ChangeMessageVisibility\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\",\\\\\\"sqs:DeleteMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.root_wingapp_Queue_01757426.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_QueueOnMessage0f11dd60_IamRole_AA73FB45.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_wingapp_Function_IamRolePolicyAttachment_F735FD96\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function_IamRole_DC08657F.name}\\"
      },
      \\"root_wingapp_QueueOnMessage0f11dd60_IamRolePolicyAttachment_56E5C6B8\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_QueueOnMessage0f11dd60_IamRole_AA73FB45.name}\\"
      }
    },
    \\"aws_lambda_event_source_mapping\\": {
      \\"root_wingapp_Queue_EventSourceMapping_9FB95FB2\\": {
        \\"batch_size\\": 1,
        \\"event_source_arn\\": \\"\${aws_sqs_queue.root_wingapp_Queue_01757426.arn}\\",
        \\"function_name\\": \\"\${aws_lambda_function.root_wingapp_QueueOnMessage0f11dd60_816B2BF5.function_name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_wingapp_Function_147C5E15\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"QUEUE_URL_cfa28427\\": \\"\${aws_sqs_queue.root_wingapp_Queue_01757426.url}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function-c83ae89f\\"
          }
        },
        \\"function_name\\": \\"Function-c83ae89f\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function_IamRole_DC08657F.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_wingapp_Function_Code_B4C30096.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_wingapp_Function_S3Object_259A2570.key}\\"
      },
      \\"root_wingapp_QueueOnMessage0f11dd60_816B2BF5\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Queue-OnMessage-0f11dd60-c893763d\\"
          }
        },
        \\"function_name\\": \\"Queue-OnMessage-0f11dd60-c893763d\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_QueueOnMessage0f11dd60_IamRole_AA73FB45.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_wingapp_QueueOnMessage0f11dd60_Code_2BA1FB61.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_wingapp_QueueOnMessage0f11dd60_S3Object_855739C1.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_wingapp_Function_Code_B4C30096\\": {
        \\"bucket_prefix\\": \\"code-c85197bd-\\"
      },
      \\"root_wingapp_QueueOnMessage0f11dd60_Code_2BA1FB61\\": {
        \\"bucket_prefix\\": \\"code-c882e0e9-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_wingapp_Function_S3Object_259A2570\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_wingapp_Function_Code_B4C30096.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      },
      \\"root_wingapp_QueueOnMessage0f11dd60_S3Object_855739C1\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_wingapp_QueueOnMessage0f11dd60_Code_2BA1FB61.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_sqs_queue\\": {
      \\"root_wingapp_Queue_01757426\\": {
        \\"name\\": \\"Queue-c87360b2\\"
      }
    }
  }
}"
`;

exports[`two functions reusing the same IFunctionHandler 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_wingapp_Function1_IamRole_4BB0139C\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"root_wingapp_Function2_IamRole_F0FE939C\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_wingapp_Function1_IamRolePolicy_2489A6E1\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function1_IamRole_4BB0139C.name}\\"
      },
      \\"root_wingapp_Function2_IamRolePolicy_2709B101\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function2_IamRole_F0FE939C.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_wingapp_Function1_IamRolePolicyAttachment_5B656765\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function1_IamRole_4BB0139C.name}\\"
      },
      \\"root_wingapp_Function2_IamRolePolicyAttachment_4D3FE8A8\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function2_IamRole_F0FE939C.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_wingapp_Function1_949A5144\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function1-c893a304\\"
          }
        },
        \\"function_name\\": \\"Function1-c893a304\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function1_IamRole_4BB0139C.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_wingapp_Function1_Code_B89D5965.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_wingapp_Function1_S3Object_78279D56.key}\\"
      },
      \\"root_wingapp_Function2_A061E64A\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function2-c822812f\\"
          }
        },
        \\"function_name\\": \\"Function2-c822812f\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_wingapp_Function2_IamRole_F0FE939C.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_wingapp_Function2_Code_B83D9762.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_wingapp_Function2_S3Object_D5F457B4.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_wingapp_Function1_Code_B89D5965\\": {
        \\"bucket_prefix\\": \\"code-c8a055d2-\\"
      },
      \\"root_wingapp_Function2_Code_B83D9762\\": {
        \\"bucket_prefix\\": \\"code-c85e28f5-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_wingapp_Function1_S3Object_78279D56\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_wingapp_Function1_Code_B89D5965.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      },
      \\"root_wingapp_Function2_S3Object_D5F457B4\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_wingapp_Function2_Code_B83D9762.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;
